Finish First Stage of Refactoring Minedraft - Exam - 16 July - 2017 - Second Way/Minedraft/Contracts/IRepository.cs

--- a/C#Fundamentals/C#OOP_Basic/Exams/Minedraft - Exam - 16 July - 2017 - Second Way/Minedraft/Minedraft.csproj
+++ b/C#Fundamentals/C#OOP_Basic/Exams/Minedraft - Exam - 16 July - 2017 - Second Way/Minedraft/Minedraft.csproj
@@ -53,9 +53,13 @@
     <Compile Include="Contracts\IUnit.cs" />
     <Compile Include="Contracts\IWriter.cs" />
     <Compile Include="Core\CommandInterpreter.cs" />
+    <Compile Include="Core\Commands\CheckCommand.cs" />
     <Compile Include="Core\Commands\Command.cs" />
+    <Compile Include="Core\Commands\DayCommand.cs" />
+    <Compile Include="Core\Commands\ModeCommand.cs" />
     <Compile Include="Core\Commands\RegisterHarvesterCommand.cs" />
     <Compile Include="Core\Commands\RegisterProviderCommand.cs" />
+    <Compile Include="Core\Commands\ShutdownCommand.cs" />
     <Compile Include="Core\Data\Repository.cs" />
     <Compile Include="Core\Data\Writer.cs" />
     <Compile Include="Core\Data\Reader.cs" />
