--- a/C#Fundamentals/C#OOP_Basic/Exams/Minedraft - Exam - 16 July - 2017 - Second Way/Minedraft/Minedraft.csproj
+++ b/C#Fundamentals/C#OOP_Basic/Exams/Minedraft - Exam - 16 July - 2017 - Second Way/Minedraft/Minedraft.csproj
@@ -32,6 +32,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Extensions.DependencyInjection, Version=2.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Extensions.DependencyInjection.2.0.0\lib\netstandard2.0\Microsoft.Extensions.DependencyInjection.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Extensions.DependencyInjection.Abstractions.2.0.0\lib\netstandard2.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -63,8 +70,8 @@
     <Compile Include="Core\Data\Repository.cs" />
     <Compile Include="Core\Data\Writer.cs" />
     <Compile Include="Core\Data\Reader.cs" />
-    <Compile Include="Core\DraftManager.cs" />
     <Compile Include="Core\Engine.cs" />
+    <Compile Include="Core\InjectAttributes.cs" />
     <Compile Include="Core\UnitsAttributes\HammerHarvesterAttribute.cs" />
     <Compile Include="Core\UnitsAttributes\SonicHarvesterAttribute.cs" />
     <Compile Include="Entities\Harvester\HammerHarvester.cs" />
@@ -82,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
